--- a/New_York_Data_Wrangling_with_Python_Project_Solution.ipynb
+++ b/New_York_Data_Wrangling_with_Python_Project_Solution.ipynb
@@ -58,7 +58,7 @@
         "id": "ym7-i7auXZPg"
       },
       "source": [
-        "> i.e. What are main main resona for bus breakdowns in the city of New York?"
+        "> i.e. What are main main reasons for bus breakdowns in the city of New York?"
       ]
     },
     {
